main.css
* {
    font-family: 'Star Wars', sans-serif;
    box-sizing: border-box;
}

body {
    display: flex;
    align-items: center;
    flex-direction: column;
    height: 100vh;
    margin: 0;
    color: white;
    background-color: black;
    margin-top: 1vmin;
    margin-bottom: 1vmin;
    margin: 0;
   
}

header {
    font-size: 7vmin;
    letter-spacing: 1vmin;
    color: gold;
}

h2 {
    font-size: 5vmin;
}

h3 {
    font-size: 4vmin;
    color: white;
}

#board {
    display: grid;
    grid-template-columns: repeat(8, 10vmin);
    grid-template-rows: repeat(8, 10vmin);
}

#board>div {
    border: 0.2vmin solid blue;
}

.empire.vader {
    background: url('images/vader.jpg');
    background-size: 6.5vh;
    background-position: center;
    width: 8vw;
    height: 7.5vh;
    border-radius: 50%;
    border: solid white;
    margin: auto;
    position: relative;
}

.rebels.yoda {
    background: url('images/yoda.png');
    background-size: 7.8vh;
    background-position: center;
    width: 8vw;
    height: 7.5vh;
    border-radius: 50%;
    border: solid white;
    margin: auto;
    position: relative;
}

.rebels {
    background: url('images/rebelalliance.png');
    background-size: 7vh;
    background-position: center;
    width: 8vw;
    height: 7.5vh;
    border-radius: 50%;
    border: solid white;
    margin: auto;
    position: relative;
}

.empire {
    background: url('images/stormtrooper.jpg');
    background-size: cover;
    background-position: center;
    width: 8vh;
    height: 7.5vh;
    border-radius: 50%;
    border: solid white;
    margin: auto;
    position: relative;
}

.white {
    background-color: white;
}

.black {
    background-color: black;
    text-align: center;
    display: flex;
    
}

#playBtn {
    margin: 0.5vmin;
}

#forfeitBtn {
    margin: 0.5vmin;
}

